--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "test": "vite build --mode=test",
     "build": "vite build",
     "preview": "vite preview"
   },
