--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@vueup/vue-quill": "^1.2.0",
     "element-plus": "^2.3.12",
     "flyio": "^0.6.14",
     "nprogress": "^0.2.0",
